--- a/compose.yml
+++ b/compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   web:
     build: .
@@ -7,6 +5,10 @@ services:
       phish-network:
     volumes:
       - app:/app
+    depends_on:
+      - db
+    restart: on-failure
+ 
   nginx:
     image: nginx
     volumes:
@@ -15,9 +17,28 @@ services:
       phish-network:
     ports:
       - "80:80" 
+  
+  db:
+    image: mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: my-secret-pw
+      MYSQL_DATABASE: phishing
+      MYSQL_USER: phisher
+      MYSQL_PASSWORD: user_password
+    volumes:
+      - data:/var/lib/mysql
+    networks:
+      phish-network:
+        ipv4_address: 10.0.0.50
+
+
 
 networks:
   phish-network:
+    ipam:
+      config:
+        - subnet: 10.0.0.0/24
 
 volumes:
   app:
+  data:
