--- a/compose.yml
+++ b/compose.yml
@@ -4,15 +4,14 @@ services:
     networks:
       phish-network:
     volumes:
-      - app:/app
-    depends_on:
-      - db
+      - db:/app/db.sqlite3
     restart: on-failure
  
   nginx:
     image: nginx
     volumes:
       - ./nginx/conf.d/:/etc/nginx/conf.d/:ro
+      - nginx:/etc/nginx
     networks:
       phish-network:
     ports:
@@ -27,5 +26,5 @@ networks:
         - subnet: 10.0.0.0/24
 
 volumes:
-  app:
   data:
+  nginx:
